# bandnames

./: .env  Cargo.toml  Makefile.toml  Names.rs  Procfile  README.md  Rocket.toml  RustConfig  names.db  names.sqlite  package.json  webpack.config.js
front/: App.css  Chunks.js
frontend/: App.css  App.js  Cargo.toml  Chunks.css  Chunks.js  Form.js  Makefile.toml  index.css
frontend/public/: index.html
frontend/src/: lib.rs
frontend/src/components/: chunks.rs
migrations/2019-06-10-205346_create_names/: down.sql  up.sql
protos/: Names.proto  Names.rs
server/migrations/2019-06-10-205346_create_names/: up.sql
server/src/: main.rs  schema.rs
src/: config.rs  lib.rs  main.rs  models.rs  routes.rs  schema.rs
static/: base.html  bundle.js  index.html  index.html.tera  style.css
static/css/: style.css
templates/: base.html.tera  chunks.html.tera  index.html  index.html.tera  style.css
