[package]
name = "bandname"
version = "0.1.0"
authors = ["Finnkauski <iwiivi@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "*"
serde = "*"
serde_derive = "*"
diesel = {version = "*", features = ["postgres", "r2d2"]}
diesel_migrations = "*"
dotenv = "*"


[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["diesel_postgres_pool", "tera_templates", "serve"]
