[package]
name = "bandname"
version = "0.1.0"
authors = ["Finnkauski <iwiivi@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.5"
rocket_contrib = { version = "0.4.5", default-features = false, features = ["diesel_postgres_pool", "tera_templates", "serve"] }
diesel = { version = "1.4.5", features = ["postgres", "r2d2"], default-features = false}
serde = "*"
serde_derive = "*"
dotenv = "*"
